clusters/homelab/apps/ai-platform/jevin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jevin
  namespace: ai-platform
  labels:
    app: jevin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jevin
  template:
    metadata:
      labels:
        app: jevin
    spec:
      serviceAccountName: default
      containers:
        - name: jevin
          image: docker.michaelhomelab.work/homelab-docker-repo/ai-platform/jevin:1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: user-workspace
              mountPath: /workspace
      volumes:
        - name: user-workspace
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jevin
  namespace: ai-platform
  labels:
    app: jevin
spec:
  type: ClusterIP
  selector:
    app: jevin
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
